Fix blurry font rendering on Windows

--- a/src/styles/banner.css
+++ b/src/styles/banner.css
@@ -439,9 +439,9 @@ body.wallpaper-transparent #toc-inner-wrapper:has(table-of-contents[data-loaded=
   }
 
   .banner-text-overlay {
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-    text-rendering: optimizeLegibility;
+    -webkit-font-smoothing: auto;
+    -moz-osx-font-smoothing: auto;
+    text-rendering: auto;
     contain: layout style;
   }
 
