--- a/src/styles/mobile-transition-fix.css
+++ b/src/styles/mobile-transition-fix.css
@@ -59,8 +59,8 @@
 
   /* 防止页面加载时的闪烁 */
   body {
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
+    -webkit-font-smoothing: auto;
+    -moz-osx-font-smoothing: auto;
   }
 
   /* 优化网格布局切换 */
@@ -86,9 +86,9 @@
 
   /* 优化字体渲染 */
   * {
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-    text-rendering: optimizeLegibility;
+    -webkit-font-smoothing: auto;
+    -moz-osx-font-smoothing: auto;
+    text-rendering: auto;
   }
 }
 
